# bayesian-heading-observer

./: .gitignore  CITATION.cff  README.md  pyproject.toml
demo/: __init__.py  run_demo.py
matlab/original/: README.md  fun_BayesInference.m  main_EachSubjFitParam.m  main_FitPrior.m  main_GroupMLE.m  main_Idd_continous.m  main_iddFit.m  plot_GroupContinous.m  plot_HeatMap.m
src/bayesian_heading_observer/: __init__.py  model.py
